# bot

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: test.yml
.sqlx/: query-0279369fec5bb0f64dbf3c951588b4d8bc0954338481ad4983ec37e97b78438f.json  query-4b9d73c26b336f84761ba4898110f0f000968f9f1262ccc81871ea615ef690c7.json  query-596a98aefad320499523f74336a3931b691c616b6fb8bccf75891a73d8e6559f.json  query-60f15e84e1066e03ae902b49ae0d4c08cae021ff20646cac978c7c1574c54561.json  query-6fa03da1d07355c3a27d0238e101ded7e3aac032ef698053899153df17788b77.json  query-86a50052b7ade8f59962398709ff6099c31e28fa25935b5a9b22e6834e083361.json  query-8ef02e2f5a88b15d7c517f95eca87b5a2df1fd826ce95e851de0a02975523b30.json  query-95387b392a89ea4862e040d6c05d036eddbaa1d748bf997e727de2fda5dafd14.json  query-a88e23aa759677e37ceb41e2104f1e870ffb979dfb898feec3b38fcf08f9c847.json  query-afa651eb20f686927ff793ac16616229e8dbd907a35f549e6cd205b9c0d74718.json  query-ba85ac1f93621436d8a1e19775c2cba1c7c6e422d551a7d98d353f8d820c8e1c.json
crates/henosis-artifacts/: Cargo.toml
crates/henosis-artifacts/src/: lib.rs
crates/henosis-bundle/: Cargo.toml
crates/henosis-bundle/src/: lib.rs
crates/henosis-cli/: Cargo.toml
crates/henosis-cli/src/: lib.rs  main.rs
crates/henosis-cli/src/snapshots/: henosis_cli__tests__snapshots_context_stale_diagnostic.snap  henosis_cli__tests__snapshots_dirty_tree_provenance_line.snap  henosis_cli__tests__snapshots_no_deployable_changes.snap  henosis_cli__tests__snapshots_public_command_help.snap
crates/henosis-core-boundary/: Cargo.toml
crates/henosis-core-boundary/src/: lib.rs
migrations/: 20260708090000_create_henosis_gate_tables.down.sql  20260708090000_create_henosis_gate_tables.up.sql  20260708093000_add_henosis_environment_retirement.down.sql  20260708093000_add_henosis_environment_retirement.up.sql  20260708180000_add_gate_run_merge_columns.down.sql  20260708180000_add_gate_run_merge_columns.up.sql  20260708210000_rename_henosis_manifest_tables.down.sql  20260708210000_rename_henosis_manifest_tables.up.sql  20260708220000_add_henosis_environment_render.down.sql  20260708220000_add_henosis_environment_render.up.sql  20260708230000_add_henosis_advisory_gate.down.sql  20260708230000_add_henosis_advisory_gate.up.sql  20260708233000_add_gate_diagnostics.down.sql  20260708233000_add_gate_diagnostics.up.sql  20260712120000_add_environment_display_label.down.sql  20260712120000_add_environment_display_label.up.sql  20260712233000_add_generation_audit.down.sql
src/: config.rs  lib.rs  templates.rs
src/bors/: comment.rs  context.rs  event.rs  merge_queue.rs  mod.rs  process.rs
src/bors/command/: mod.rs  parser.rs
src/bors/handlers/: help.rs  mod.rs  ping.rs  pr_events.rs  refresh.rs  review.rs  squash.rs  trybuild.rs
src/database/: client.rs  mod.rs  operations.rs
src/github/api/: client.rs  mod.rs
src/henosis/: config.rs  core_client.rs  d26.rs  db.rs  db_tests.rs  environment.rs  gate.rs  gate_report.rs  generation.rs  git_sync.rs  github.rs  graph.rs  lockfile.rs  manifest.rs  merge.rs  mod.rs  queue.rs  render_diagnostics.rs  service.rs  status.rs
src/server/: mod.rs  webhook.rs
src/tests/: github.rs  mod.rs
src/tests/mock/: permissions.rs  pull_request.rs  repository.rs
src/tests/utils/: io.rs  webhook.rs
tests/data/migrations/: 20260708090000_create_henosis_gate_tables.sql  20260708093000_add_henosis_environment_retirement.sql  20260708180000_add_gate_run_merge_columns.sql  20260708210000_rename_henosis_manifest_tables.sql  20260708220000_add_henosis_environment_render.sql  20260708230000_add_henosis_advisory_gate.sql  20260708233000_add_gate_diagnostics.sql  20260712120000_add_environment_display_label.sql  20260712233000_add_generation_audit.sql
tests/data/webhook/henosis/: 2026-07-07T21-04-03.207Z-installation-6160b330-7a47-11f1-9927-dfb2d65d965b.json  2026-07-07T21-04-04.172Z-push-62140142-7a47-11f1-838b-80ebf54c7122.json  2026-07-07T21-04-11.546Z-workflow_run-66688ab0-7a47-11f1-9d85-33f37e071527.json
web/templates/: help.html  queue.html
