[workspace]
resolver = "3"
members = [".", "crates/henosis-bundle", "crates/henosis-cli", "crates/henosis-core-boundary"]
default-members = [".", "crates/henosis-bundle", "crates/henosis-cli", "crates/henosis-core-boundary"]

[package]
name = "bors"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI
clap = { version = "4", features = ["env", "derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
toml = "1.0"
rust_team_data = { git = "https://github.com/rust-lang/team" }

# GitHub
octocrab = { version = "0.49", features = ["timeout", "stream"] }

# Async
futures = "0.3"
tokio = { version = "1", features = ["net", "fs", "rt-multi-thread", "process"] }

# Web
hyper = "1"
axum = { version = "0.8", features = ["http2"] }
axum-embed = "0.1"
rust-embed = "8"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.7", features = ["catch-panic", "compression-br", "compression-gzip", "trace"] }
jsonwebtoken = "10"
url = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
http = "1"
askama = "0.16"

# Henosis boundaries
henosis-bundle = { path = "crates/henosis-bundle" }
henosis-core-boundary = { path = "crates/henosis-core-boundary" }
henosis-proto = { git = "https://github.com/henosis-playground/core.git", branch = "fix/verification-loop-1" }
newtype-uuid = { git = "https://github.com/henosis-playground/newtype-uuid.git", features = ["v4", "v7"] }
uuid = { version = "1.18.1", features = ["v4", "v7"] }

# Cryptography
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
secrecy = "0.10"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }

# Time
chrono = "0.4"

# Utilities
arc-swap = "1"
itertools = "0.15"
indexmap = { version = "2", features = ["serde"] }
rand = { version = "0.10", features = ["alloc"] }

# Paths
tempfile = "3"
which = "8"

# Text processing
pulldown-cmark = "0.13"
regex = "1"
similar = "2.7"

[dev-dependencies]
insta = "1.26"
wiremock = "0.6"
tracing-test = "0.2"
regex = "1"
parking_lot = "0.12"
thread_local = "1"
sqlparser = { version = "0.62", features = ["visitor"] }
graphql-parser = "0.4"
urlencoding = "2"

[profile.release]
debug = 1

[profile.dev.package.sqlx-macros]
opt-level = 3
