[package]
name = "henosis-artifacts"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "MIT OR Apache-2.0"

[dependencies]
hex = "0.4"
henosis-app = { git = "https://github.com/henosis-playground/core.git", rev = "b3d918621e6b7757814c4ae76e4abfa659e5ed74" }
henosis-types = { git = "https://github.com/henosis-playground/core.git", rev = "b3d918621e6b7757814c4ae76e4abfa659e5ed74" }
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"
walkdir = "2"
