[package]
name = "henosis-bundle"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "MIT OR Apache-2.0"

[dependencies]
hex = "0.4"
minicbor = { version = "2", features = ["std"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"
walkdir = "2"
