[package]
name = "henosis-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "MIT OR Apache-2.0"

[[bin]]
name = "henosis"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
henosis-app = { path = "../../../core/crates/henosis-app" }
henosis-artifacts = { path = "../henosis-artifacts" }
henosis-core-boundary = { path = "../henosis-core-boundary" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
url = "2"

[dev-dependencies]
insta = "1.26"
tempfile = "3"
